fix: change the code in index.html file

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
           <h2 class="block__title">Education</h2>
           <ul class="block__list">
             <li><span>Masters of Business Administration, JUN 2017</span><br>Tel Aviv University, Recanati School of Business;</li>
-            <li><span>Bachelor of Business Administration in Economics and Management, OCT 2011</span>The Academic College of Tel Aviv-Yaffo, The School of Economics and Management.</li>
+            <li><span>Bachelor of Business Administration in Economics and Management, OCT 2011</span><br>The Academic College of Tel Aviv-Yaffo, The School of Economics and Management.</li>
           </ul>
         </section>
         <section class="language block">
             <h2 class="block__title">Language</h2>
             <ul class="block__list">
-              <li><span>Hebrew</span><br> – Upper Advanced;</li>
+              <li><span>Hebrew</span> – Upper Advanced;</li>
               <li><span>English</span> – Intermediate - B1;</li>
               <li><span>Russian</span> – Mother Tongue.</li>
             </ul>
