fix: change the code of two sections

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <section class="contacts block">
           <h3 class="block__title">Contacts</h3>
           <ul>
-            <li><i class="fas fa-map-marker-alt">Tel-Aviv, Israel</i></li>
+            <li><i class="fas fa-map-marker-alt"></i>Tel-Aviv, Israel</li>
             <li><i class="fas fa-mobile-alt"></i>+(972)54-746-11-71</li>
-            <li><i class="fas fa-at">Barkovakseniya@gmail.com</i></li>
-            <li><a href="https://github.com/KseniyaBr"><i class="fab fa-github">KseniyaBr</i></a></li>
+            <li><i class="fas fa-at"></i>Barkovakseniya@gmail.com</li>
+            <li><a href="https://github.com/KseniyaBr"><i class="fab fa-github"></i>KseniyaBr</a></li>
           </ul>
         </section>
       </aside>
@@ -38,12 +38,11 @@
         <section class="skills block">
           <h2 class="block__title">Key Competencies</h2>
           <ul class="block__list">
-            <li>Highly motivated, self-educated web developer is seeking a Junior Web Developer position;</li>
             <li>Good understanding of front-end technologies, including <span>HTML5, CSS3, JavaScript</span>;</li>
             <li>Knowledge of web design and the fundamentals of UI, and experience with <span>Figma</span>;</li>
             <li>Proficient in MS Office, especially <span>Excel</span>;</li>
             <li>Experience with <span>ERP</span> system and <span>Oracle DB</span> systems;</li>
-            <li>Ability to self-study and work independently</li>
+            <li>High motivation, ability to fast self-studying and work independently.</li>
           </ul>
         </section>
         <section class="courses block">
