--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,13 +12,14 @@
   <div class="container">
     <div class="content">
       <aside class="side__content">
-        <section class="intro block">     
-          <img class="prof__photo" src="img/profilephoto.png" alt="profile photo">
-          <h1 class="full__name">Kseniya<br>Barkova</h1>
-          <span>Economist</span>
-          <p class="profession">Front-end developer
-          </p>
-        </section>
+         <figure class="intro block">
+          <img class="prof__photo" src="img/profilephoto.png" alt="Candidate's photo"/>
+          <figcaption class="candidate__description">
+            <p class="full__name">Kseniya<br>Barkova</p>
+            <span>Economist</span>
+            <p class="profession">Front-end developer</p>
+          </figcaption>
+        </figure>
         <section class="about block">
           <h3 class="block__title">About me</h3>
           <p class="about__text">I am a web developer just getting started.<br>After months of self-education using online courses, webinars, tutorials, and lots of practices, I would like to move on to real projects, work with a team of professionals, learn from them and gain experience.</p>
@@ -27,10 +27,10 @@
         <section class="contacts block">
           <h3 class="block__title">Contacts</h3>
           <ul>
-            <li><i class="fas fa-map-marker-alt">Tel-Aviv, Israel</i></li>
+            <li><i class="fas fa-map-marker-alt"></i>Tel-Aviv, Israel</li>
             <li><i class="fas fa-mobile-alt"></i>+(972)54-746-11-71</li>
-            <li><i class="fas fa-at">Barkovakseniya@gmail.com</i></li>
-            <li><a href="https://github.com/KseniyaBr"><i class="fab fa-github">KseniyaBr</i></a></li>
+            <li><i class="fas fa-at"></i>Barkovakseniya@gmail.com</li>
+            <li><a href="https://github.com/KseniyaBr"><i class="fab fa-github"></i>KseniyaBr</a></li>
           </ul>
         </section>
       </aside>
