fix: change the code in html file

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
   <div class="container">
     <div class="content">
       <aside class="side__content">
-        <section class="intro block">     
-          <img class="prof__photo" src="img/profilephoto.png" alt="profile photo">
-          <h1 class="full__name">Kseniya<br>Barkova</h1>
-          <span>Economist</span>
-          <p class="profession">Front-end developer
-          </p>
-        </section>
+         <figure class="intro block">
+           <img class="prof__photo" src="img/profilephoto.png" alt="Candidate's photo"/>
+           <figcaption class="candidate__description">
+             <p class="full__name">Kseniya<br>Barkova</p>
+             <span>Economist</span>
+             <p class="profession">Front-end developer</p>
+           </figcaption>
+         </figure>
         <section class="about block">
           <h3 class="block__title">About me</h3>
           <p class="about__text">I am a web developer just getting started.<br>After months of self-education using online courses, webinars, tutorials, and lots of practices, I would like to move on to real projects, work with a team of professionals, learn from them and gain experience.</p>
