fix: update the footer code

--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@
       </main>
     </div>    
     <footer class="footer">
-      <a href="https://rs.school/js/">
-        <img class="rss-logo" src="img/rs_school_js.svg" alt="The Rolling Scopes.JavaScript/Front-end"</a>
-      <p class="footer__text">2020 © <a href="https://github.com/KseniyaBr">MyKsenka</a></p>
+        <div class="footer__content">
+          <a href="https://rs.school/js/">
+            <img class="rss-logo" src="img/rs_school_js.svg" alt="The Rolling Scopes.JavaScript/Front-end"></a>
+          <p class="footer__text">2020 © <a href="https://github.com/KseniyaBr">MyKsenka</a></p>
+        </div>
     </footer>
   </div>
 </body>
