feat: change the html file content

--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
         <section class="skills block">
           <h2 class="block__title">Key Competencies</h2>
           <ul class="block__list">
-            <li>Highly motivated, self-educated web developer is seeking a Junior Web Developer position;</li>
+            <li>High motivation, ability to self-studying and work independently;</li>
             <li>Good understanding of front-end technologies, including <span>HTML5, CSS3, JavaScript</span>;</li>
             <li>Knowledge of web design and the fundamentals of UI, and experience with <span>Figma</span>;</li>
             <li>Proficient in MS Office, especially <span>Excel</span>;</li>
             <li>Experience with <span>ERP</span> system and <span>Oracle DB</span> systems;</li>
-            <li>Ability to self-study and work independently</li>
           </ul>
         </section>
         <section class="courses block">
@@ -68,9 +67,9 @@
    .animate({scrollTop:destination}, "slow");
    return false;
    });
-			      </code>
-				</pre>
-       		</li>
+ 		 </code>
+		</pre>
+       	     </li>
           </ul>        
         </section>
         <section class="education block">
