fix: change the image format

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="content">
       <aside class="side__content">
          <figure class="intro block">
-           <img class="prof__photo" src="img/profilephoto.png" alt="Candidate's photo"/>
+           <img class="prof__photo" src="img/profilephoto.jpg" alt="Candidate's photo"/>
            <figcaption class="candidate__description">
              <p class="full__name">Kseniya<br>Barkova</p>
              <span>Economist</span>
